# CSM-Show2024

./: .gitignore  CMakeLists.txt  DataContainer.h  GLImageProcessor.cpp  GLImageProcessor.h  GlobalData.cpp  GlobalData.h  SharedData.h  SvgWidget.cpp  SvgWidget.h  align_and_crop.cpp  align_and_crop.h  analyse_results.cpp  analyse_results.h  detect_faces.cpp  detect_faces.h  detect_markers.cpp  detect_markers.h  displaywidget.cpp  displaywidget.h  displaywidget.ui  get_results.cpp  get_results.h  main.cpp  ocr.cpp  ocr.h  printer.cpp  printer.h
llm_python/: summarise.py
print_python/: print_receipt.py
public/: index.html
